--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,6 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+@font-face {
+    font-family: 'Adobe Garamond Pro';
+    src: url('../fonts/AGaramondPro-Semibold.eot');
+    src: local('Adobe Garamond Pro Semibold'), local('AGaramondPro-Semibold'),
+        url('../fonts/AGaramondPro-Semibold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/AGaramondPro-Semibold.woff') format('woff'),
+        url('../fonts/AGaramondPro-Semibold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
 @import "./reset";
 @import "./columns";
 @import "./variables";
