--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
 $font-mons: 'Montserrat', sans-serif;
 $c-white:white;
 $color-bg:#E5E5E5;
-$font-gar: 'Garamond', sans-serif;
+$font-gar: 'Adobe Garamond Pro', serif;
 $font-rob: 'Roboto', sans-serif;
 $brown: #E0B973;
 $black:  #14274A;
