i did home page

--- a/src/components/roomtype/index.scss
+++ b/src/components/roomtype/index.scss
@@ -41,8 +41,10 @@
     }
     &__content{
         margin-bottom: 65px;
+    }
+    &__major{
         border-left: 2px solid #14274A;
-        padding-left: 1px;
+        padding-left: 20px;
     }
 }
 
