--- a/src/components/roomtype/index.scss
+++ b/src/components/roomtype/index.scss
@@ -1,7 +1,7 @@
 @import "../global";
 
 .room{
-    background-color: $white;
+    background-color: #FFFFFF;
     padding-top: 82px;
     &__img{
         min-height: 100%;
