--- a/src/components/testinomails/index.scss
+++ b/src/components/testinomails/index.scss
@@ -1,6 +1,7 @@
 @import "../global";
 
 .testinomails{
+    background-color: #FFFFFF;
     &__test{
         display: flex;
         flex-direction: column;
