--- a/src/components/roomtype/index.scss
+++ b/src/components/roomtype/index.scss
@@ -6,9 +6,7 @@
     &__img{
         min-height: 100%;
         padding-left: 30px;
-    }
-    &__main-row{
-        margin-bottom: 65px;
+        margin-top: 65px;
     }
     &__title{
         @include font($black,$font-mons,normal, 44px, 36px);
