i did all pages

--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -5,3 +5,9 @@
     line-height: $height;
     font-size: $size;
 }
+
+@mixin center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
