--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -9,8 +9,8 @@ a{
     text-decoration: none;
 }
 .container{
-    max-width: 1100px;
-    width: 100%;
+    width: 1400px;
+    max-width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
 }
