--- a/src/components/buttons/index.scss
+++ b/src/components/buttons/index.scss
@@ -7,8 +7,8 @@
     background-color: $brown;
     outline: none;
     border: none;
+    text-transform: uppercase;
     transition: 0.5s;
-    margin-top: 65px;
     &:hover{
         cursor: pointer;
         transform: scale(1.1);
@@ -18,14 +18,4 @@
         margin-right: 18px;;
         border-radius: 1px;
     }
-    &__content{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-}
-.text{
-    @include font(#FFFFFF,$font-mons, bold, 30px, 25px);
-    letter-spacing: 0.05em;
-    margin: 50px 0 15px;
 }
