--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -7,6 +7,20 @@
     padding-top: 193px;
     background-size: cover;
     background-repeat: no-repeat;
+    // &::after{
+    //     content: "";
+    //     position: absolute;
+    //     width: 100%;
+    //     height: 100%;
+    //     top: 0;
+    //     left: 0;
+    //     background-color: rgba($color: #14274A, $alpha: .5);
+    // }
+    // &__content{
+    //     position: absolute;
+    //     z-index: 5;
+    //     width: 100%;
+    // }
     &__title{
         @include font(#FFFFFF,$font-gar,bold, 170px, 150px);
         letter-spacing: 0.07em;
@@ -22,5 +36,10 @@
         @include font(#FFFFFF,$font-mons,normal, 30px, 25px);
         letter-spacing: 0.1em;
         max-width: 580px;
+    }
+    &__button{
+        margin: 0 auto;
+        margin-top: 65px;
+        @include center;
     }
 }
